--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,11 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Sneha Jha / ****"
+title                    : "Your Name / Site Title"
 title_separator          : "-"
-name                     : &name "Sneha"
-description              : &description "Ph.D. candidate ABE Purdue University" #"personal description"
-url                      : https://github.com/venomj26/Snehajha.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+name                     : &name "Your Name"
+description              : &description "personal description"
+url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
